--- a/wordpress/docker-compose.yml
+++ b/wordpress/docker-compose.yml
@@ -4,7 +4,9 @@ services:
   db:
     image: mysql:5.7
     volumes:
-      - db_data:/var/lib/mysql
+      - ./db_data:/var/lib/mysql
+    ports:
+      - "3306:3306"
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: somewordpress
@@ -15,6 +17,8 @@ services:
     depends_on:
       - db
     image: wordpress:latest
+    volumes:
+        - ./html:/var/www/html # マウントするディレクトリを指定
     ports:
       - "8000:80"
     restart: always
